# bookstore_rust

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/auth/: mod.rs
src/config/: mod.rs
src/controllers/: auth.rs  authors.rs  books.rs
src/fairings/: cors.rs
src/migrator/: m20220101_000001_create_user_table.rs  m20230321_053747_create_author_table.rs  m20230321_054811_create_book_table.rs  mod.rs
src/routes/: mod.rs
