[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "0.12.15", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
sea-orm-migration = "0.12.15"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
dotenvy = "0.15.7"
